# monosys

./: README.md
nmrhubusage/: pyproject.toml
nmrhubusage/src/nmrhubusage/: __init__.py  processinfo.py  who.py
nmrhubusage/src/tests/: cl_process.py  nmradmin.yaml  runwho.py  test_parentuid.py  test_processinfo.py  test_who.py
usersessions/: pyproject.toml
usersessions/src/usersessions/: __init__.py  sessions.py
usersessions/trials/: getsessions.py  session.yaml
writemessage/: pyproject.toml
writemessage/src/writemessage/: __init__.py  main.py
