[project]
name = "nmrhubusage"
description = "Usage module"
license = {text = "MIT" }
version = "1.0"
dependencies = ['psutil','pyaml']
requires-python= ">= 3.10"
readme = "README.md"
authors = [
    {name = "Gerard"},
    {email = "gweatherby@uchc.edu"}
]

[project.optional-dependencies] 
test = ['pytest']

[tool.setuptools]
package-dir = {"" = "src" }  # Tells setuptools that the root package is in the "src" directory

[tool.setuptools.packages.find]
where = ["src"]  # Specify the "src" directory to look for packages


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


