[project]
name = "writemessage"
description = "TBD"
license = {text = "MIT" }
version = "1.0"
dependencies = ['postgresql_access>=1.2.1',
	'keyrings.efile',
	'rapidfuzz']
requires-python= ">= 3.10"
readme = "README.md"
authors = [
    {name = "Gerard"},
    {email = "gweatherby@uchc.edu"}
]

[tool.setuptools]
package-dir = {"" = "src" }  # Tells setuptools that the root package is in the "src" directory

[tool.setuptools.packages.find]
where = ["src"]  # Specify the "src" directory to look for packages


[project.scripts]
writemessage = "writemessage.main:main"

[project.optional-dependencies] 
test = ['pyyaml', 'pytest']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

